--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-skipped">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,12 +49,12 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>E:\Selenium\Framework1\PP_Automation\seleniumgrid.xml</span>
+                    <span>E:\Selenium\Framework1\PP_Automation\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Suite">
-                    <span class="test-stats">3 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,31 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,  1 skipped,  </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods skipped suite-Suite"> (hide)</a> <!-- hide-methods skipped suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods skipped suite-Suite"> (show)</a> <!-- show-methods skipped suite-Suite -->
                     </span>
-                    <div class="method-list-content passed suite-Suite">
+                    <div class="method-list-content skipped suite-Suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Practice.SeleniumGrid" hash-for-method="browserOpen(http://10.145.12.134:5555/wd/hub, chrome)">browserOpen(http://10.145.12.134:5555/wd/hub, chrome)</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="test.IBE_Enrollment" hash-for-method="IbeEnr">IbeEnr</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Practice.SeleniumGrid" hash-for-method="browserOpen(http://10.145.12.134:5555/wd/hub, firefox)">browserOpen(http://10.145.12.134:5555/wd/hub, firefox)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Practice.SeleniumGrid" hash-for-method="browserOpen(http://10.145.12.146:4444/wd/hub, internet explorer)">browserOpen(http://10.145.12.146:4444/wd/hub, internet explorer)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Suite -->
+                    </div> <!-- method-list-content skipped suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -127,69 +117,53 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">Practice.SeleniumGrid</span>
+              <img src="skipped.png"/>
+              <span class="class-name">test.IBE_Enrollment</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="browserOpen(http://10.145.12.134:5555/wd/hub, chrome)">
-                  </a> <!-- browserOpen(http://10.145.12.134:5555/wd/hub, chrome) -->
-                  <span class="method-name">browserOpen</span>
-                  <span class="parameters">(http://10.145.12.134:5555/wd/hub, chrome)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="browserOpen(http://10.145.12.134:5555/wd/hub, firefox)">
-                  </a> <!-- browserOpen(http://10.145.12.134:5555/wd/hub, firefox) -->
-                  <span class="method-name">browserOpen</span>
-                  <span class="parameters">(http://10.145.12.134:5555/wd/hub, firefox)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="browserOpen(http://10.145.12.146:4444/wd/hub, internet explorer)">
-                  </a> <!-- browserOpen(http://10.145.12.146:4444/wd/hub, internet explorer) -->
-                  <span class="method-name">browserOpen</span>
-                  <span class="parameters">(http://10.145.12.146:4444/wd/hub, internet explorer)</span>
+                  <a name="IbeEnr">
+                  </a> <!-- IbeEnr -->
+                  <span class="method-name">IbeEnr</span>
+                  <div class="stack-trace">org.openqa.selenium.WebDriverException: Reached error page: about:neterror?e=dnsNotFound&amp;u=https%3A//phlvdqapport08.nextgen.com/enrollment/invitation%3Fibeid%3D3184084b-bb50-47e2-bdc9-edc5db1c22b8%7E6ac3288b-8ed3-4cb3-977b-a02a72c3d349&amp;c=UTF-8&amp;f=regular&amp;d=We%20can%E2%80%99t%20connect%20to%20the%20server%20at%20phlvdqapport08.nextgen.com.
+Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
+System info: host: &apos;NGBLR-00735&apos;, ip: &apos;192.168.0.6&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_131&apos;
+Driver info: org.openqa.selenium.firefox.FirefoxDriver
+Capabilities [{moz:profile=C:\Users\Sharathu\AppData\Local\Temp\rust_mozprofile.DlHjjAer329W, rotatable=false, moz:geckodriverVersion=0.23.0, timeouts={implicit=0.0, pageLoad=300000.0, script=30000.0}, pageLoadStrategy=normal, unhandledPromptBehavior=dismiss and notify, moz:headless=false, platform=ANY, moz:accessibilityChecks=false, moz:useNonSpecCompliantPointerOrigin=false, acceptInsecureCerts=false, browserVersion=64.0.2, moz:shutdownTimeout=60000.0, platformVersion=6.1, moz:processID=14540.0, browserName=firefox, javascriptEnabled=true, platformName=windows, setWindowRect=true, moz:webdriverClick=true}]
+Session ID: 9fd6d5b4-7a77-4ecd-9530-bca53dbc8944
+	at org.openqa.selenium.remote.http.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:150)
+	at org.openqa.selenium.remote.http.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:115)
+	at org.openqa.selenium.remote.http.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:45)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:164)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:82)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:637)
+	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:364)
+	at generic.BaseClass.BaseClassMethod(BaseClass.java:84)
+	at test.IBE_Enrollment.chooseDriver(IBE_Enrollment.java:65)
+... Removed 32 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
+          </div> <!-- suite-Suite-class-skipped -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Selenium\Framework1\PP_Automation\seleniumgrid.xml</span>
+            <span class="header-content">E:\Selenium\Framework1\PP_Automation\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; parallel=&quot;tests&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test1&quot; parallel=&quot;tests&quot;&gt;
-    &lt;parameter name=&quot;nodeurl&quot; value=&quot;http://10.145.12.146:4444/wd/hub&quot;/&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;internet explorer&quot;/&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Test1&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Practice.SeleniumGrid&quot;/&gt;
+      &lt;class name=&quot;test.IBE_Enrollment&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test1 --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test2&quot; parallel=&quot;tests&quot;&gt;
-    &lt;parameter name=&quot;nodeurl&quot; value=&quot;http://10.145.12.134:5555/wd/hub&quot;/&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;Practice.SeleniumGrid&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test2 --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test3&quot; parallel=&quot;tests&quot;&gt;
-    &lt;parameter name=&quot;nodeurl&quot; value=&quot;http://10.145.12.134:5555/wd/hub&quot;/&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;Practice.SeleniumGrid&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test3 --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -202,12 +176,6 @@
             <ul>
               <li>
                 <span class="test-name">Test1 (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Test2 (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Test3 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -233,24 +201,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'browserOpen')
-data.setCell(0, 2, 'Practice.SeleniumGrid')
-data.setCell(0, 3, 15325);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'browserOpen')
-data.setCell(1, 2, 'Practice.SeleniumGrid')
-data.setCell(1, 3, 13320);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'browserOpen')
-data.setCell(2, 2, 'Practice.SeleniumGrid')
-data.setCell(2, 3, 9738);
+data.setCell(0, 1, 'IbeEnr')
+data.setCell(0, 2, 'test.IBE_Enrollment')
+data.setCell(0, 3, 0);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 38 seconds</span>
+              <span class="suite-total-time">Total running time: 0 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -276,19 +236,17 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Practice.SeleniumGrid</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.IBE_Enrollment</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">browserOpen(http://10.145.12.134:5555/wd/hub, firefox)</span>
+                <span class="method-name">IbeEnr</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">browserOpen(http://10.145.12.146:4444/wd/hub, internet explorer)</span>
+              <div class="configuration-method before">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">chooseDriver</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">browserOpen(http://10.145.12.134:5555/wd/hub, chrome)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-method before -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
