--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92c58b">  <td>18/12/07 09:57:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumGrid.browserOpen(java.lang.String, java.lang.String)[pri:0, instance:Practice.SeleniumGrid@8e24743]">browserOpen</td> 
-  <td>TestNG-tests-2@556974845</td>   <td></td> </tr>
-<tr bgcolor="92c58b">  <td>18/12/07 09:57:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumGrid.browserOpen(java.lang.String, java.lang.String)[pri:0, instance:Practice.SeleniumGrid@a38d7a3]">browserOpen</td> 
-  <td>TestNG-tests-1@2027101557</td>   <td></td> </tr>
-<tr bgcolor="92c58b">  <td>18/12/07 09:57:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumGrid.browserOpen(java.lang.String, java.lang.String)[pri:0, instance:Practice.SeleniumGrid@543c6f6d]">browserOpen</td> 
-  <td>TestNG-tests-3@1590678669</td>   <td></td> </tr>
+<tr bgcolor="a57272">  <td>19/01/12 22:56:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IBE_Enrollment.IbeEnr()[pri:0, instance:test.IBE_Enrollment@710c2b53]">IbeEnr</td> 
+  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="a57272">  <td>19/01/12 22:56:06</td>   <td>-3778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IBE_Enrollment.chooseDriver()[pri:0, instance:test.IBE_Enrollment@710c2b53]">&gt;&gt;chooseDriver</td> 
+<td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
 </table>
